--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.77.0",
     "swiper": "^11.0.4",
     "typescript": "^5.2.2"
   }
