--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.77.0",
     "swiper": "^11.0.4",
+    "swup": "^4.6.1",
     "typescript": "^5.2.2"
   }
 }
