--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "sass": "^1.77.0",
     "swiper": "^11.0.4",
     "swup": "^4.6.1",
-    "typescript": "^5.2.2"
+    "three": "^0.164.1",
+    "typescript": "^5.2.2",
+    "vite-plugin-glsl": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.164.1"
   }
 }
