--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/react": "^3.0.5",
+    "@astrojs/check": "^0.9.2",
+    "@astrojs/react": "^3.6.2",
     "@studio-freight/lenis": "^1.0.42",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "astro": "^3.5.5",
-    "gsap": "^3.12.4",
+    "astro": "^4.14.2",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.77.0",
@@ -27,6 +27,7 @@
     "vite-plugin-glsl": "^1.3.0"
   },
   "devDependencies": {
+    "@types/gsap": "^1.20.2",
     "@types/three": "^0.164.1"
   }
 }
